--- a/index.html.html
+++ b/index.html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>paginarafaelsouza</title>
+    <title>site-agregador-de-links</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
