--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-     <img src="bg-desktop" alt="fundo da tela">
+     <img src="bg-desktop.jpg" alt="fundo da tela">
     <div id="container">
         
         <div id="profile"><img src="Avatar.png" alt="foto rafael bonitao">
