--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </a>
         
     </div>
-        <footer>Feito Com muito carinho <ion-icon name="heart"></ion-icon></footer>    
+        <footer>Feito Com<ion-icon name="heart">  muito carinho <ion-icon name="heart">por Rafael Souza </ion-icon></footer>    
         
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
