--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         
    
     <ul>
-        <li><a href="https://www.linkedin.com/feed/" target="_blank">Linkedin </a></h1></li>
-        <li><a href="https://github.com/"target="_blank">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/rafael-aguiar-3583752a8/" target="_blank">Linkedin </a></h1></li>
+        <li><a href="https://github.com/NOOBSARAFA"target="_blank">Github</a></li>
         <li><a href="#" target="_blank">Quem sou eu</a></li>
         <li><a href="https://www.instagram.com/rafaelsouzaag/" target="_blank">Me siga no instagram</a></li>
     </ul>
