--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div id="container">
         
-        <div id="profile"><img src="./assets/Avatar.png" alt="foto rafael bonitao">
+        <div id="profile"><img src="./Avatar.png" alt="foto rafael bonitao">
         <p>Rafael Souza </p></div>
 
         <div id="switch" onclick="togglemode()"> 
