--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
    
     <ul>
-        <li><a href="www.linkedin.com/in/rafaelsouzaag" target="_blank">Linkedin </a></h1></li>
+        <li><a href="https://www.linkedin.com/in/rafael-aguiar-3583752a8/" target="_blank">Linkedin </a></h1></li>
         <li><a href="https://github.com/NOOBSARAFA/paginarafaelsouza"target="_blank">Github</a></li>
         <li><a href="#" target="_blank">Quem sou eu(em construcao)</a></li>
         <li><a href="https://www.instagram.com/rafaelsouzaag/" target="_blank">Me siga no instagram</a></li>
